# agent-plugins

./: .gitattributes  .gitignore  CLAUDE.md  README.md
plugins/warden/: CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
plugins/warden/.claude-plugin/: plugin.json
plugins/warden/hooks/: hooks.json  inject-charter.cmd  run-hook.cmd  session-start
plugins/warden/scripts/: build.py  build_check.py  install-hooks.sh  validate.py
plugins/warden/scripts/lib/: warden_lib.py
plugins/warden/skills/et-0001-keeping-test-helpers-private/: SKILL.md
plugins/warden/skills/et-0002-surfacing-failures/: SKILL.md
plugins/warden/skills/et-0003-validating-at-boundaries/: SKILL.md
plugins/warden/skills/et-0004-asserting-observable-behavior/: SKILL.md
plugins/warden/skills/et-0005-writing-comments-that-explain-why/: SKILL.md
plugins/warden/skills/et-0006-naming-after-the-domain/: SKILL.md
plugins/warden/skills/et-0007-avoiding-any-and-unchecked-casts/: SKILL.md
plugins/warden/skills/et-0008-making-illegal-states-unrepresentable/: SKILL.md
plugins/warden/skills/et-0009-separating-decisions-from-effects/: SKILL.md
plugins/warden/skills/et-0010-passing-dependencies-explicitly/: SKILL.md
plugins/warden/skills/et-0011-injecting-system-dependencies/: SKILL.md
plugins/warden/skills/et-0012-validating-config-at-startup/: SKILL.md
plugins/warden/skills/et-0013-attaching-context-to-errors/: SKILL.md
plugins/warden/skills/et-0014-keeping-tests-independent/: SKILL.md
plugins/warden/skills/et-0015-asserting-one-behavior-per-test/: SKILL.md
plugins/warden/skills/lookup-tenet/: SKILL.md
plugins/warden/skills/using-warden/: SKILL.md
plugins/warden/templates/: ET-NNNN-template.md  charter-preamble.md
plugins/warden/tenets/: ET-0001-keeping-test-helpers-private.md  ET-0002-surfacing-failures.md  ET-0003-validating-at-boundaries.md  ET-0004-asserting-observable-behavior.md  ET-0005-writing-comments-that-explain-why.md  ET-0006-naming-after-the-domain.md  ET-0007-avoiding-any-and-unchecked-casts.md  ET-0008-making-illegal-states-unrepresentable.md  ET-0009-separating-decisions-from-effects.md  ET-0010-passing-dependencies-explicitly.md  ET-0011-injecting-system-dependencies.md  ET-0012-validating-config-at-startup.md  ET-0013-attaching-context-to-errors.md  ET-0014-keeping-tests-independent.md  ET-0015-asserting-one-behavior-per-test.md
plugins/warden/tests/: conftest.py  test_hook.py  test_parse.py  test_render.py  test_validate.py
plugins/warden/tests/skill-triggering/: README.md  measure.sh  run-suite.sh  run-test.sh
plugins/warden/tests/skill-triggering/measurements/using-warden/competing-with-et/: 01-private-helper-test.txt  02-empty-catch-block.txt  03-cast-any-to-type.txt
plugins/warden/tests/skill-triggering/measurements/using-warden/non-code-conversation/: 01-explain-concept.txt  02-tooling-question.txt  03-meta-question.txt
plugins/warden/tests/skill-triggering/measurements/using-warden/vague-code-action/: 01-broad-refactor.txt  02-review-my-diff.txt  03-add-feature-no-tenet-keyword.txt
plugins/warden/tests/skill-triggering/scenarios/et-0001-keeping-test-helpers-private/negative/: 01-private-encapsulation.txt  02-mocking-dependency.txt
plugins/warden/tests/skill-triggering/scenarios/et-0001-keeping-test-helpers-private/positive/: 01-direct.txt  02-deadline.txt  03-authority.txt
plugins/warden/tests/skill-triggering/scenarios/et-0002-surfacing-failures/negative/: 01-log-level-tuning.txt  02-expected-recovery.txt
plugins/warden/tests/skill-triggering/scenarios/et-0002-surfacing-failures/positive/: 01-direct.txt  02-deadline.txt  03-authority.txt
plugins/warden/tests/skill-triggering/scenarios/et-0003-validating-at-boundaries/negative/: 01-internal-helper-typing.txt  02-pure-function-test.txt
plugins/warden/tests/skill-triggering/scenarios/et-0003-validating-at-boundaries/positive/: 01-direct.txt  02-deadline.txt  03-authority.txt
plugins/warden/tests/skill-triggering/scenarios/et-0004-asserting-observable-behavior/negative/: 01-snapshot-strategy.txt  02-test-pyramid.txt
plugins/warden/tests/skill-triggering/scenarios/et-0004-asserting-observable-behavior/positive/: 01-direct.txt  02-deadline.txt  03-authority.txt
plugins/warden/tests/skill-triggering/scenarios/et-0005-writing-comments-that-explain-why/negative/: 01-algorithm-docstring.txt  02-jsdoc-tooling.txt
plugins/warden/tests/skill-triggering/scenarios/et-0005-writing-comments-that-explain-why/positive/: 01-direct.txt  02-deadline.txt  (+1 more)
(+12 files in other folders)
